--- a/public/ansta/css/dashboard.css
+++ b/public/ansta/css/dashboard.css
@@ -6860,6 +6860,18 @@ a.section-darker:hover, a.section-darker:focus, button.section-darker:hover, but
 	.mb--300 {
 		margin-bottom: -300px !important;
 	}
+	.pl-10{
+		padding-left: 10px !important;
+	}
+	.pr-10{
+		padding-right: 10px !important;
+	}
+	.pl-20{
+		padding-left: 20px !important;
+	}
+	.pr-20{
+		padding-right: 20px !important;
+	}
 	.pt-10 {
 		padding-top: 10px !important;
 	}
