--- a/public/ansta/css/dashboard.css
+++ b/public/ansta/css/dashboard.css
@@ -759,16 +759,16 @@ pre code {
 /*--Form Controls---*/
 
 .form-control {
-	font-size: 1rem;
+	font-size: 2rem;
 	line-height: 1.5;
 	display: block;
 	width: 100%;
-	height: calc(2.75rem + 2px);
+	/* height: calc(2.75rem + 2px); */
 	padding: .625rem .75rem;
 	transition: all .2s cubic-bezier(.68, -.55, .265, 1.55);
-	color: #8898aa;
-	border:1px solid #dae0ef;
-	border-radius: .375rem;
+	color: #000;
+	border:1px solid rgba(0, 0, 0,.2);
+	border-radius: .300rem;
 	background-color: #fff;
 	background-clip: padding-box;
 	box-shadow: none;
@@ -1122,7 +1122,7 @@ textarea.form-control {
 	font-weight: 600;
 	line-height: 1.5;
 	display: inline-block;
-	padding: .625rem 1.25rem;
+	padding: .250rem .600rem;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -1132,7 +1132,7 @@ textarea.form-control {
 	vertical-align: middle;
 	white-space: nowrap;
 	border: 1px solid transparent;
-	border-radius: .375rem;
+	border-radius: .300rem;
 }
 @media screen and (prefers-reduced-motion: reduce) {
 	.btn {
@@ -3084,10 +3084,12 @@ input[type='submit'].btn-block, input[type='reset'].btn-block, input[type='butto
 	font-size: 1.25rem;
 	line-height: inherit;
 	display: inline-block;
-	margin-right: 1rem;
-	padding-top: .0625rem;
-	padding-bottom: .0625rem;
 	white-space: nowrap;
+}
+.navbar-brand-img {
+	max-height: 5.0rem;
+	text-align: left;
+	display: inline-block;
 }
 .navbar-brand:hover, .navbar-brand:focus {
 	text-decoration: none;
@@ -5721,6 +5723,295 @@ a.bg-darker:hover, a.bg-darker:focus, button.bg-darker:hover, button.bg-darker:f
 .mh-100 {
 	max-height: 100% !important;
 }
+
+.m-0 {
+  margin: 0 !important;
+}
+
+.mt-0,
+.my-0 {
+  margin-top: 0 !important;
+}
+
+.mr-0,
+.mx-0 {
+  margin-right: 0 !important;
+}
+
+.mb-0,
+.my-0 {
+  margin-bottom: 0 !important;
+}
+
+.ml-0,
+.mx-0 {
+  margin-left: 0 !important;
+}
+
+.m-1 {
+  margin: 0.25rem !important;
+}
+
+.mt-1,
+.my-1 {
+  margin-top: 0.25rem !important;
+}
+
+.mr-1,
+.mx-1 {
+  margin-right: 0.25rem !important;
+}
+
+.mb-1,
+.my-1 {
+  margin-bottom: 0.25rem !important;
+}
+
+.ml-1,
+.mx-1 {
+  margin-left: 0.25rem !important;
+}
+
+.m-2 {
+  margin: 0.5rem !important;
+}
+
+.mt-2,
+.my-2 {
+  margin-top: 0.5rem !important;
+}
+
+.mr-2,
+.mx-2 {
+  margin-right: 0.5rem !important;
+}
+
+.mb-2,
+.my-2 {
+  margin-bottom: 0.5rem !important;
+}
+
+.ml-2,
+.mx-2 {
+  margin-left: 0.5rem !important;
+}
+
+.m-3 {
+  margin: 1rem !important;
+}
+
+.mt-3,
+.my-3 {
+  margin-top: 1rem !important;
+}
+
+.mr-3,
+.mx-3 {
+  margin-right: 1rem !important;
+}
+
+.mb-3,
+.my-3 {
+  margin-bottom: 1rem !important;
+}
+
+.ml-3,
+.mx-3 {
+  margin-left: 1rem !important;
+}
+
+.m-4 {
+  margin: 1.5rem !important;
+}
+
+.mt-4,
+.my-4 {
+  margin-top: 1.5rem !important;
+}
+
+.mr-4,
+.mx-4 {
+  margin-right: 1.5rem !important;
+}
+
+.mb-4,
+.my-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.ml-4,
+.mx-4 {
+  margin-left: 1.5rem !important;
+}
+
+.m-5 {
+  margin: 3rem !important;
+}
+
+.mt-5,
+.my-5 {
+  margin-top: 3rem !important;
+}
+
+.mr-5,
+.mx-5 {
+  margin-right: 3rem !important;
+}
+
+.mb-5,
+.my-5 {
+  margin-bottom: 3rem !important;
+}
+
+.ml-5,
+.mx-5 {
+  margin-left: 3rem !important;
+}
+
+.p-0 {
+  padding: 0 !important;
+}
+
+.pt-0,
+.py-0 {
+  padding-top: 0 !important;
+}
+
+.pr-0,
+.px-0 {
+  padding-right: 0 !important;
+}
+
+.pb-0,
+.py-0 {
+  padding-bottom: 0 !important;
+}
+
+.pl-0,
+.px-0 {
+  padding-left: 0 !important;
+}
+
+.p-1 {
+  padding: 0.25rem !important;
+}
+
+.pt-1,
+.py-1 {
+  padding-top: 0.25rem !important;
+}
+
+.pr-1,
+.px-1 {
+  padding-right: 0.25rem !important;
+}
+
+.pb-1,
+.py-1 {
+  padding-bottom: 0.25rem !important;
+}
+
+.pl-1,
+.px-1 {
+  padding-left: 0.25rem !important;
+}
+
+.p-2 {
+  padding: 0.5rem !important;
+}
+
+.pt-2,
+.py-2 {
+  padding-top: 0.5rem !important;
+}
+
+.pr-2,
+.px-2 {
+  padding-right: 0.5rem !important;
+}
+
+.pb-2,
+.py-2 {
+  padding-bottom: 0.5rem !important;
+}
+
+.pl-2,
+.px-2 {
+  padding-left: 0.5rem !important;
+}
+
+.p-3 {
+  padding: 1rem !important;
+}
+
+.pt-3,
+.py-3 {
+  padding-top: 1rem !important;
+}
+
+.pr-3,
+.px-3 {
+  padding-right: 1rem !important;
+}
+
+.pb-3,
+.py-3 {
+  padding-bottom: 1rem !important;
+}
+
+.pl-3,
+.px-3 {
+  padding-left: 1rem !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.pt-4,
+.py-4 {
+  padding-top: 1.5rem !important;
+}
+
+.pr-4,
+.px-4 {
+  padding-right: 1.5rem !important;
+}
+
+.pb-4,
+.py-4 {
+  padding-bottom: 1.5rem !important;
+}
+
+.pl-4,
+.px-4 {
+  padding-left: 1.5rem !important;
+}
+
+.p-5 {
+  padding: 3rem !important;
+}
+
+.pt-5,
+.py-5 {
+  padding-top: 3rem !important;
+}
+
+.pr-5,
+.px-5 {
+  padding-right: 3rem !important;
+}
+
+.pb-5,
+.py-5 {
+  padding-bottom: 3rem !important;
+}
+
+.pl-5,
+.px-5 {
+  padding-left: 3rem !important;
+}
+
 .pt-8, .py-8 {
     padding-top: 8rem !important;
 }
@@ -5815,6 +6106,9 @@ a.bg-darker:hover, a.bg-darker:focus, button.bg-darker:hover, button.bg-darker:f
 .font-italic {
 	font-style: italic !important;
 }
+.text-pale-orange{
+	color:rgba(230, 126, 34,0.7) !important;
+}
 .text-white {
 	color: #fff !important;
 }
@@ -5898,6 +6192,12 @@ a.text-darker:hover, a.text-darker:focus {
 }
 .text-black-50 {
 	color: rgba(0, 0, 0, .5) !important;
+}
+.text-black-70 {
+	color: rgba(0, 0, 0, .7) !important;
+}
+.text-black {
+	color: #000000  !important;
 }
 .text-white-50 {
 	color: rgba(255, 255, 255, .5) !important;
@@ -7216,11 +7516,12 @@ a.section-darker:hover, a.section-darker:focus, button.section-darker:hover, but
 	top: 0;
 	left: 0;
 	width: 100%;
+	height:96px;
 	padding-right: 0 !important;
 	padding-left: 0 !important;
 	background-color: #fff;
 	box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
-	border-bottom: 5px solid #e67e22;
+	border-bottom: 3px solid #e67e22;
 }
 @media (min-width: 768px) {
 	.main-content .container-fluid {
