--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,3 +5,18 @@
     padding-left: 60px;
     padding-right: 60px;
 }
+.login-container{
+    padding-top: 3rem;
+    padding-right: 2rem;
+}
+.login-form{
+    padding-left: 1rem;
+}
+.login-form form div{
+    margin-bottom: .800rem;
+}
+@media(max-width: 768px){
+    .login-r{
+        display: none;
+    }
+}
