--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -9,3 +9,41 @@
     background-color: #e67e22;
     color:#fff;
 }
+
+.round-p5-ardhi{
+    padding: 5px;
+    border: 1px solid #e67e22;
+    border-radius: 50%;
+}
+
+.hover-ardhi:hover{
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.hover-normal:hover{
+    box-shadow: 0px 3px 6px black;
+}
+
+.color-ardhi{
+    color: #e67e22;
+}
+
+.bg-ardhi{
+    background-color: #e67e22;
+}
+
+.border-ardhi{
+    border: 1px solid #e67e22;
+}
+
+.box-fit{
+    width: fit-content;
+    height: fit-content;
+}
+
+.input-style{
+    border: none;
+    border-bottom: 2px solid #4c5050;
+    width: 100%;
+}
