--- a/public/ansta/css/dashboard.css
+++ b/public/ansta/css/dashboard.css
@@ -804,6 +804,9 @@ pre code {
 .form-control:disabled, .form-control[readonly] {
 	opacity: 1;
 	background-color: #f4f6fb;
+	border: 0px;
+	border-bottom: 2px solid #ccc;
+	border-radius: 0%;
 }
 select.form-control:focus::-ms-value {
 	color: #8898aa;
