--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -47,3 +47,10 @@
     border-bottom: 2px solid #4c5050;
     width: 100%;
 }
+
+.fab{
+    position: absolute;
+    z-index: 10000;
+    top: 10%;
+    right: 5%;
+}
