--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -51,6 +51,15 @@
 .fab{
     position: absolute;
     z-index: 10000;
-    top: 10%;
+    top: 8rem;
     right: 5%;
+}
+
+.box-md{
+    padding: 3px;
+    width: 100px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
