--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -63,3 +63,71 @@
     justify-content: center;
     align-items: center;
 }
+.icon-md{
+    
+}
+
+.attachments{
+    padding: 4px;
+    border-style: groove;
+    border-color: #ccccc0;
+}
+
+.document {
+	position: relative;
+	width: 100%;
+	background: #ffffff;
+	text-align: center;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	font-size: 16px;
+	overflow: hidden;
+}
+.document * {
+	-webkit-box-sizing: border-box;
+	box-sizing: padding-box;
+	-webkit-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+}
+.document img{
+	max-width: 100%;
+	vertical-align: top;
+	position: relative;
+	background-color: #fff;
+}
+.document h3 {
+	margin: 0;
+	font-size: 1.3em;
+	font-weight: 400;
+}
+.document span {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	-webkit-transform: translate(-50%, 0%);
+	transform: translate(-50%, 0%);
+	width: 100%;
+	height: 100%;
+    line-height: 60px;
+    text-align: center;
+    display: none;
+	color: #e67e22;
+	font-size: 200%;
+}
+/* .document:hover img,
+.document.hover img {
+	background:linear-gradient(87deg, #e67e22 , #322599  100%);
+	color:#fff;
+} */
+.document:hover span,
+.document.hover span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	background:rgba(0,0,0,0.8);
+	border:1px solid #e67e22;
+}
+/* .document:hover i,
+.document.hover i {
+	-webkit-transform: translate(-50%, 5px);
+	transform: translate(-50%, 5px);
+} */
