--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -24,6 +24,9 @@
 .hover-normal:hover{
     box-shadow: 0px 3px 6px black;
 }
+.hover-text:hover{
+    color: darkblue;
+}
 
 .color-ardhi{
     color: #e67e22;
